# vulkan-profiles-ash

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
.cargo/: Config.toml
examples/: compute.rs
examples/custom_profile/: Cargo.toml
examples/custom_profile/.cargo/: config.toml
examples/custom_profile/src/: main.rs
examples/custom_profile/vulkan_profiles/: vulkan_profiles.cpp
examples/custom_profile/vulkan_profiles/profiles/: VP_VULKAN_PROFILES_ASH_custom_profile.json
examples/custom_profile/vulkan_profiles/vulkan/: vulkan_profiles.h  vulkan_profiles.hpp
examples/shaders/: maximum_reduction.slang  maximum_reduction.spv
examples/vulkan_profiles/: vulkan_profiles.cpp
examples/vulkan_profiles/profiles/: VP_VPA_examples_compute.json
examples/vulkan_profiles/vulkan/: vulkan_profiles.h  vulkan_profiles.hpp
src/: capabilities.rs  entry.rs  enum_debug.rs  enum_debugs.rs  lib.rs  utils.rs
src/vp/: functions.rs  linked.rs  mod.rs  structs.rs  video_queue.rs
tests/: device.rs  get_profile.rs  instance.rs  profile_properties.rs  video_queue.rs
tests/common/: mock_vulkan_api.cpp  mock_vulkan_api.rs  mod.rs
tests/vulkan_profiles/: vulkan_profiles.cpp
tests/vulkan_profiles/profiles/: VP_VPA_test_fallback.json  VP_VPA_test_requires.json  VP_VPA_test_supported.json  VP_VPA_test_unsupported_device.json  VP_VPA_test_unsupported_instance.json  VP_VPA_test_variants.json  VP_VPA_test_video.json
tests/vulkan_profiles/vulkan/: vulkan_profiles.h  vulkan_profiles.hpp
