[package]
name = "vp-ash"
version = "0.2.0"
authors = ["Trent Shailer <trent.shailer@gmail.com>"]
description = "Vulkan Profiles API bindings for Ash"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trentshailer/vulkan-profiles-ash"
edition = "2021"

[dependencies]
ash = { version = "0.38", default-features = false }

[dev-dependencies] # Dependencies for examples and tests.
rayon = "1.10"
rand_distr = "0.4"
rand = "0.8"

[build-dependencies]

cc = { version = "1.2" } # Compile the Vulkan Profiles library to be statically linked.

[features]
default = ["link_vulkan", "debug", "std"]

link_vulkan = ["ash/linked"] # Statically link Vulkan.
debug = ["ash/debug"]        # Enable structs to derive Debug.
std = ["ash/std"]            # Enable std support.

test = ["default"] # Enable code paths in build.rs for testing the library.

example = ["default"] # Enable code paths in build.rs for running the example.
