[package]
name = "vp-ash"
version = "0.3.0+1.4.304"
authors = ["Trent Shailer <trent.shailer@gmail.com>"]
description = "Vulkan Profiles API bindings for Ash"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trentshailer/vulkan-profiles-ash"
edition = "2021"

[dependencies]
ash = { version = "0.38", default-features = false }

[dev-dependencies] # Dependencies for examples and tests.
rayon = "1.10"
rand_distr = "0.4"
rand = "0.8"

[build-dependencies]

cc = { version = "1.2" } # Compile the Vulkan Profiles library to be statically linked.

[features]
default = ["link_vulkan", "debug", "std"]

link_vulkan = ["ash/linked"] # Statically link Vulkan.
debug = ["ash/debug"]        # Enable structs to derive Debug.
std = ["ash/std"]            # Enable std support.

test = ["default"]    # Enable code paths in build.rs for testing the library.
example = ["default"] # Enable code paths in build.rs for running the example.

# Vulkan profiles feature flags
VK_KHR_video_queue = []

# Additional Vulkan include files
VK_USE_PLATFORM_ANDROID_KHR = []
VK_USE_PLATFORM_FUCHSIA = []
VK_USE_PLATFORM_IOS_MVK = []
VK_USE_PLATFORM_MACOS_MVK = []
VK_USE_PLATFORM_METAL_EXT = []
VK_USE_PLATFORM_VI_NN = []
VK_USE_PLATFORM_WAYLAND_KHR = []
VK_USE_PLATFORM_WIN32_KHR = []
VK_USE_PLATFORM_XCB_KHR = []
VK_USE_PLATFORM_XLIB_KHR = []
VK_USE_PLATFORM_DIRECTFB_EXT = []
VK_USE_PLATFORM_XLIB_XRANDR_EXT = []
VK_USE_PLATFORM_GGP = []
VK_USE_PLATFORM_SCREEN_QNX = []
VK_USE_PLATFORM_SCI = []
VK_ENABLE_BETA_EXTENSIONS = []
